added JavaScript functionality

--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ body {
     background-color: #fff;
     box-shadow: 0 0 3px white;
     border-radius: 20px;
+    margin-bottom: 20px;
 
     display: flex;
 }
@@ -41,4 +42,64 @@ input {
 #add-task:hover {
     background-color: green;
     color: white;
+}
+
+/*Styling for tasks added to list*/
+
+.task {
+    width: 100%;
+    font-size: 16px;
+    background-color: #fff;
+    padding: 5px;;
+    box-shadow: 0 0 3px;
+    border-radius: 10px;
+    margin-bottom: 8px;
+
+    display: flex;
+    justify-content: space-between;
+}
+
+.task li {
+    list-style: none;
+    flex: 4;
+    padding: 5px;
+    font-size: 1.3rem;
+}
+
+.task button {
+    width: 30px;
+    height: 30px;
+    font-size: 1rem;
+    border-radius: 10px;
+    padding: 10px;
+    margin: 0 5px;
+    transition: .3s;
+    cursor:  pointer;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.task .checkTask {
+    color: orange;
+    background-color: #fff;
+    border: 2px solid orange;
+}
+
+.task .checkTask:hover {
+    color: #fff;
+    background-color: orange; 
+}
+
+
+.task .deleteTask {
+    color: red;
+    background-color: #fff;
+    border: 2px solid red;
+}
+
+.task .deleteTask:hover {
+    color: #fff;
+    background-color: red;
 }
